--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.1",
+    "react-select": "^5.10.1",
     "recharts": "^2.10.3",
     "tailwind-merge": "^2.2.0"
   },
